[gd_scene load_steps=5 format=3 uid="uid://bt6y8w3mxn7kl"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_menu"]
[ext_resource type="Script" path="res://scripts/GreekVaseBackground.gd" id="2_background"]

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font_size = 48
font_color = Color(0.1, 0.1, 0.1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_button"]
font_size = 24
font_color = Color(0.1, 0.1, 0.1, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("2_background")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "AMPHORAE
The Twelve Labours"
label_settings = SubResource("LabelSettings_title")
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "A Greek Mythological Puzzle-Platformer"
label_settings = SubResource("LabelSettings_button")
horizontal_alignment = 1

[node name="VSeparator" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Begin the Labours"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"